Deleted the refactor folder; bugfixd the CSV header issue in file manager;  created the rest of the usermanagers; idk how to use the new IDataRepository interface pls help; App can create and login users; AdminViewer is left with 2 more functionality yet to be implemented; i should copy over JJ's code to this branch but im eepy